--- a/public/package.json
+++ b/public/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
-    "toastr": "^2.1.4"
+    "jquery-confirm": "^3.3.2",
+    " ": "^2.1.4"
   }
 }
