--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
         "jquery": "^3.2",
+        "jquery-confirm": "^3.3.2",
+        "laravel-echo": "^1.3.5",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
+        "pusher-js": "^4.2.2",
+        "toastr": "^2.1.4",
         "vue": "^2.5.7"
     }
 }
