--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "jenssegers/mongodb": "^3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "nesbot/carbon": "^1.22"
+        "nesbot/carbon": "^1.22",
         "pusher/pusher-php-server": "^3.0"
     },
     "require-dev": {
